--- a/less/footer.less
+++ b/less/footer.less
@@ -10,6 +10,7 @@ footer{
     flex-direction: row-reverse;
     font-size: 2rem;
     padding: 2rem;
+    margin-bottom: 0;
 
       p{
           color:@offPink;
