Layout and color to bottom of body

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,4 +99,37 @@
 //----  Ended above  Iraj ,Date :12/19/2019----
 
 
+
+.lowerBody {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+
+    h1 {
+      .personalSpace();
+    }
+
+    div {
+      background-color: @offPink;
+      border-radius: 20px;
+      .personalSpace();
+      padding: 3rem 0;
+    }
+}
+
+.infoBoxes {
+  .display-flex(space-around, center);
+  margin: 10rem 0 20rem 0;
+
+      div {
+        width: 25rem;
+        height: 25rem;
+        .personalSpace();
+        background-color: @Orange;
+        border-radius: 20px;
+        color: @Purple;
+      }
+}
+
+
   
