--- a/less/home-page.less
+++ b/less/home-page.less
@@ -106,6 +106,7 @@
   text-align: center;
 
     h1 {
+      font-family: 'Inria Serif', serif;
       .personalSpace();
     }
 
@@ -119,7 +120,7 @@
 
 .infoBoxes {
   .display-flex(space-around, center);
-  margin: 10rem 0 20rem 0;
+  margin: 8rem 0 15rem 0;
 
       div {
         width: 25rem;
