--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,3 @@
-.personalSpace {
-  margin: 1rem 0;
-  padding: 1rem 0;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -138,14 +134,14 @@ html {
 }
 html,
 body {
-  font-family: 'Arial', sans-serif;
+  font-family: sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: 'Inria Serif', serif;
+  font-family: sans-serif;
 }
 h1 {
   font-size: 4rem;
@@ -202,6 +198,8 @@ img {
 footer .footer_nav {
   background: linear-gradient(to right, #F44174, #4C1E4F);
   border-top: 5px solid #FA7E61;
+  bottom: 0;
+  position: fixed;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -302,36 +300,4 @@ footer .footer_nav p {
   to {
     opacity: 1;
   }
-}
-.lowerBody {
-  width: 75%;
-  margin: auto;
-  text-align: center;
-}
-.lowerBody h1 {
-  font-family: 'Inria Serif', serif;
-  margin: 1rem 0;
-  padding: 1rem 0;
-}
-.lowerBody div {
-  background-color: #FEE1C7;
-  border-radius: 20px;
-  margin: 1rem 0;
-  padding: 1rem 0;
-  padding: 3rem 0;
-}
-.infoBoxes {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin: 8rem 0 15rem 0;
-}
-.infoBoxes div {
-  width: 25rem;
-  height: 25rem;
-  margin: 1rem 0;
-  padding: 1rem 0;
-  background-color: #FA7E61;
-  border-radius: 20px;
-  color: #4C1E4F;
 }
