--- a/less/footer.less
+++ b/less/footer.less
@@ -3,8 +3,8 @@ footer{
     .footer_nav{
     background: linear-gradient(to right,@Pink,@Purple); 
     border-top:5px solid @Orange;
-    // bottom: 0;
-    // position:fixed;
+    bottom: 0;
+    position:fixed;
     width: 100%;
     .display-flex(space-evenly,center);
     flex-direction: row-reverse;
