--- a/less/global.less
+++ b/less/global.less
@@ -7,11 +7,11 @@
   }
   
   html, body {
-    font-family: 'Arial', sans-serif;
+    font-family: sans-serif;
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: 'Inria Serif', serif;
+    font-family: sans-serif;
   }
   
   h1 {
