Worked on layout and colors

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -99,8 +99,39 @@
 //----  Ended above  Iraj ,Date :12/19/2019----
 
 
+/************ MichelleRH ******************/
 
+.lowerBody {
+  width: 75%;
+  margin: auto;
+  text-align: center;
 
+    h1 {
+      font-family: 'Inria Serif', serif;
+      .personalSpace();
+    }
+
+    div {
+      background-color: @offPink;
+      border-radius: 20px;
+      .personalSpace();
+      padding: 3rem 0;
+    }
+}
+
+.infoBoxes {
+  .display-flex(space-around, center);
+  margin: 8rem 0 15rem 0;
+
+      div {
+        width: 25rem;
+        height: 25rem;
+        .personalSpace();
+        background-color: @Orange;
+        border-radius: 20px;
+        color: @Purple;
+      }
+}
 
 
   
