--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.personalSpace {
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -300,4 +304,37 @@ footer .footer_nav p {
   to {
     opacity: 1;
   }
+}
+/************ MichelleRH ******************/
+.lowerBody {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+}
+.lowerBody h1 {
+  font-family: 'Inria Serif', serif;
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
+.lowerBody div {
+  background-color: #FEE1C7;
+  border-radius: 20px;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  padding: 3rem 0;
+}
+.infoBoxes {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 8rem 0 15rem 0;
+}
+.infoBoxes div {
+  width: 25rem;
+  height: 25rem;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  background-color: #FA7E61;
+  border-radius: 20px;
+  color: #4C1E4F;
 }
