--- a/css/index.css
+++ b/css/index.css
@@ -138,14 +138,14 @@ html {
 }
 html,
 body {
-  font-family: sans-serif;
+  font-family: "Arial", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: sans-serif;
+  font-family: 'Inria Serif', serif;
 }
 h1 {
   font-size: 4rem;
