--- a/css/index.css
+++ b/css/index.css
@@ -313,19 +313,27 @@ footer .footer_nav p {
   font-family: 'Inria Serif', serif;
   margin: 1rem 0;
   padding: 1rem 0;
+  margin-bottom: 2.5rem;
 }
 .lowerBody div {
   background-color: #FEE1C7;
   border-radius: 20px;
   margin: 1rem 0;
   padding: 1rem 0;
-  padding: 3rem 0;
+  padding: 2rem 0;
+}
+.lowerBody div h3 {
+  font-size: 2.6rem;
+  padding-bottom: 1.5rem;
+}
+.lowerBody div p {
+  padding: 0 1rem;
 }
 .infoBoxes {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
-  margin: 8rem 0 15rem 0;
+  margin: 5rem 0 15rem 0;
 }
 .infoBoxes div {
   width: 25rem;
@@ -335,4 +343,7 @@ footer .footer_nav p {
   background-color: #FA7E61;
   border-radius: 20px;
   color: #4C1E4F;
+}
+.infoBoxes div h4 {
+  color: #FEE1C7;
 }
