created about us sign in and sign up pages

--- a/less/footer.less
+++ b/less/footer.less
@@ -3,14 +3,17 @@ footer{
     .footer_nav{
     background: linear-gradient(to right,@Pink,@Purple); 
     border-top:5px solid @Orange;
-    bottom: 0;
-    position:fixed;
+    // bottom: 0;
+    //  position: fixed; //this need to be change
     width: 100%;
     .display-flex(space-evenly,center);
     flex-direction: row-reverse;
     font-size: 2rem;
     padding: 2rem;
-    margin-bottom: 0;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    margin-bottom: 0px;
 
       p{
           color:@offPink;
