--- a/less/nav.less
+++ b/less/nav.less
@@ -10,16 +10,16 @@
             text-decoration: none;
             &:hover{
              transform: scale(1.1);
-             color: @Pink;
+             color:rgb(116, 41, 53);
             }
 
         }
         .current{
-            color:@Pink;
+            color:rgb(116, 41, 53);
         }
         
        .logo-img{
-           img{width: 50%;
+           img{width: 45%;
         }
            
         } 
