--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,7 @@
+.personalSpace {
+  margin: 1rem 0;
+  padding: 1rem 0;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -129,19 +133,23 @@ table {
 * {
   box-sizing: border-box;
 }
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 html {
   font-size: 62.5%;
 }
 html,
 body {
-  font-family: sans-serif;
+  font-family: "Arial", sans-serif;
 }
 h1,
 h2,
 h3,
 h4,
 h5 {
-  font-family: sans-serif;
+  font-family: 'Inria Serif', serif;
 }
 h1 {
   font-size: 4rem;
@@ -187,19 +195,17 @@ img {
 }
 .nav_bar a:hover {
   transform: scale(1.1);
-  color: #F44174;
+  color: #742935;
 }
 .nav_bar .current {
-  color: #F44174;
+  color: #742935;
 }
 .nav_bar .logo-img img {
-  width: 50%;
+  width: 45%;
 }
 footer .footer_nav {
   background: linear-gradient(to right, #F44174, #4C1E4F);
   border-top: 5px solid #FA7E61;
-  bottom: 0;
-  position: fixed;
   width: 100%;
   display: flex;
   justify-content: space-evenly;
@@ -207,7 +213,10 @@ footer .footer_nav {
   flex-direction: row-reverse;
   font-size: 2rem;
   padding: 2rem;
-  margin-bottom: 0;
+  bottom: 0px;
+  left: 0px;
+  right: 0px;
+  margin-bottom: 0px;
 }
 footer .footer_nav p {
   color: #FEE1C7;
@@ -265,6 +274,8 @@ footer .footer_nav p {
 .slideshow-container .mySlides img {
   width: 100%;
   height: 400px;
+  background-position: center;
+  object-fit: cover;
 }
 .dot {
   height: 15px;
@@ -300,4 +311,222 @@ footer .footer_nav p {
   to {
     opacity: 1;
   }
+}
+.main-heading {
+  margin: 7.8rem;
+}
+.main-heading h1 {
+  text-transform: uppercase;
+  text-align: center;
+  border: 2px solid #4C1E4F;
+  padding: 1rem;
+  color: #4C1E4F;
+  background: #ddd;
+  box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
+}
+.card-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  margin: 7rem;
+  width: 90%;
+  height: 50%;
+}
+@media (max-width: 500px) {
+  .card-wrapper {
+    grid-template-columns: 1fr;
+    grid-gap: 1rem;
+    width: 50%;
+    margin-top: 7rem;
+    margin-bottom: 7rem;
+  }
+}
+.card-wrapper .card-container {
+  background: #c282c2;
+  box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
+}
+@media (max-width: 500px) {
+  .card-wrapper .card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+  }
+}
+.card-wrapper .card-container:hover {
+  transform: scale(1.1);
+  transition: 0.5 ease in;
+}
+.card-wrapper .card-container .card-img {
+  background: #ddd;
+  width: 100%;
+}
+.card-wrapper .card-container .card-img img {
+  width: 80%;
+  height: 150px;
+  margin-left: 20px;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50%;
+  border: 4px solid #c282c2;
+}
+.card-wrapper .card-container .card-text {
+  width: 100%;
+  color: white;
+  background: #c282c2;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+}
+.card-wrapper .card-container .card-text h4 {
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  margin-top: 1px;
+  font-family: cursive;
+}
+.card-wrapper .card-container .card-text p {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  font-family: cursive;
+}
+.card-wrapper .card-container .card-text .contact {
+  margin: 1rem;
+}
+.card-wrapper .card-container .card-text .contact a {
+  color: #FFFFFF;
+  margin-right: 1px;
+  font-size: 1.8rem;
+}
+.card-wrapper .card-container .card-text .contact a:hover {
+  color: lightgray;
+}
+@keyframes bounce {
+  0%,
+  100%,
+  20%,
+  50%,
+  80% {
+    -webkit-transform: translateY(0);
+    -ms-transform: translateY(0);
+    transform: translateY(0);
+  }
+  40% {
+    -webkit-transform: translateY(-30px);
+    -ms-transform: translateY(-30px);
+    transform: translateY(-30px);
+  }
+  60% {
+    -webkit-transform: translateY(-15px);
+    -ms-transform: translateY(-15px);
+    transform: translateY(-15px);
+  }
+}
+.card-img > img {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+}
+.card-img > img:hover {
+  cursor: pointer;
+  animation-name: bounce;
+  -moz-animation-name: bounce;
+}
+.signin-main {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  top: 0;
+}
+@media (max-width: 500px) {
+  .signin-main {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.signin-main .signin-img {
+  opacity: 0.5;
+}
+.signin-main .signin-img img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+.signin-main form {
+  background: linear-gradient(to right, #F44174, #4C1E4F);
+}
+.signin-main form .flex-outer li,
+.signin-main form .flex-inner {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 6rem;
+  padding: 1rem;
+  font-size: 1.5rem;
+  color: white;
+}
+.signin-main form .flex-outer > li > label,
+.signin-main form .flex-outer li p {
+  flex: 1 0 120px;
+  max-width: 220px;
+}
+.signin-main form .flex-outer > li > label + *,
+.signin-main form .flex-inner {
+  flex: 1 0 220px;
+}
+.signin-main form button {
+  width: 100%;
+  padding: 1rem;
+  color: white;
+  background: #4C1E4F;
+}
+.signin-main form input {
+  padding: 1rem;
+}
+/************ MichelleRH ******************/
+.lowerBody {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+}
+.lowerBody h1 {
+  font-family: 'Inria Serif', serif;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  margin-bottom: 2.5rem;
+}
+.lowerBody div {
+  background-color: #FEE1C7;
+  border-radius: 20px;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  padding: 2rem 0;
+}
+.lowerBody div h3 {
+  font-size: 2.6rem;
+  padding-bottom: 1.5rem;
+}
+.lowerBody div p {
+  padding: 0 1rem;
+}
+.infoBoxes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 5rem 0 15rem 0;
+}
+.infoBoxes div {
+  width: 25rem;
+  height: 25rem;
+  margin: 1rem 0;
+  padding: 1rem 0;
+  background-color: #FA7E61;
+  border-radius: 20px;
+  color: #4C1E4F;
+}
+.infoBoxes div h4 {
+  color: #FEE1C7;
 }
