--- a/less/global.less
+++ b/less/global.less
@@ -1,17 +1,20 @@
 * {
     box-sizing: border-box;
   }
+  *:before, *:after {
+    box-sizing: inherit;
+  }
   
   html {
     font-size: 62.5%;
   }
   
   html, body {
-    font-family: sans-serif;
+    font-family: "Arial", sans-serif;
   }
   
   h1, h2, h3, h4, h5 {
-    font-family: sans-serif;
+    font-family:'Inria Serif', serif;
   }
   
   h1 {
