--- a/less/home-page.less
+++ b/less/home-page.less
@@ -57,9 +57,13 @@
            
           }
           img{
-            width:100%;
-            height:400px; 
-        }
+            width: 100%;
+            height: 400px;
+            background-position: center;
+            // background-size: cover;
+            object-fit: cover
+          }
+    
 
        
        } 
@@ -96,7 +100,244 @@
     from {opacity: .4} 
     to {opacity: 1}
   }
-//----  Ended above  Iraj ,Date :12/19/2019----
+//----  Ended above by Iraj ,Date :12/19/2019----
+
+// ----Started Below by Iraj ,Date:12/20/2019---
+// About US styling---
+.main-heading{
+  margin:7.8rem;
+  h1{
+    text-transform: uppercase;
+    text-align: center;
+    border:2px solid @Purple;
+    padding:1rem;
+    color:@Purple;
+    background:#ddd;
+    box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
+  }
+}
+
+
+.card-wrapper{
+  display: grid;
+ grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+// grid-template-columns: repeat(7, 1fr);
+@media @phone{
+  grid-template-columns: 1fr;
+  grid-gap:1rem;
+  width: 50%;
+  margin-top: 7rem;
+  margin-bottom: 7rem;
+  // margin-right: 200px;
+}
+ margin: 7rem;
+ width: 90%;
+ height: 50%;
+ 
 
 
   
+ .card-container{
+  background:rgb(194, 130, 194);
+  box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
+  // border:3px solid black;  
+  @media @phone{
+   
+    //  margin-left: 4rem;
+    .display-flex(center,center);
+    flex-direction: column;
+     width: 100%;
+  }
+  &:hover{
+    transform: scale(1.1);
+    transition: 0.5 ease in;
+  }
+  .card-img{
+    background: #ddd;
+    width: 100%;
+    // border-radius: 50%;
+   img{
+   width: 80%;
+   height: 150px;
+   margin-left: 20px;
+   object-fit: cover;
+   overflow: hidden;
+   border-radius: 50%;
+   border: 4px solid rgb(194, 130, 194);
+  
+    }
+
+  }
+  .card-text{
+    width: 100%;
+    color:white;
+    background:rgb(194, 130, 194);
+    .display-flex(start,center);
+    flex-direction:column;
+    h4{
+      
+     font-size: 1.7rem;
+     text-transform: uppercase;
+     margin-top:1px;
+     font-family:cursive;
+    }
+    p{
+      font-size: 1.4rem;
+      text-transform: uppercase;
+      font-family:cursive;
+    }
+   .contact{
+     margin:1rem;
+     
+     a{
+       color:@white;
+       margin-right: 1px;
+       font-size: 1.8rem;
+       &:hover{
+         color:lightgray;
+       }
+     }
+   }
+    
+  }
+ }
+}
+// Bounce Animation for card container...//
+@keyframes bounce {
+	0%, 100%, 20%, 50%, 80% {
+		-webkit-transform: translateY(0);
+		-ms-transform:     translateY(0);
+		transform:         translateY(0)
+	}
+	40% {
+		-webkit-transform: translateY(-30px);
+		-ms-transform:     translateY(-30px);
+		transform:         translateY(-30px)
+	}
+	60% {
+		-webkit-transform: translateY(-15px);
+		-ms-transform:     translateY(-15px);
+		transform:         translateY(-15px)
+	}
+}
+.card-img>img {  
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation-timing-function: ease-in-out;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  -webkit-animation-iteration-count: infinite;
+  &:hover {
+    cursor: pointer;
+    animation-name: bounce;
+    -moz-animation-name: bounce;
+  }
+  
+}
+// bounce animation ended above and about us styling//
+
+// started signin/signup styling by Iraj ,Date:12/20/2019--
+
+.signin-main{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  @media @phone{
+    grid-template-columns: 1fr 1fr;
+  }
+  top: 0;
+  .signin-img{
+    opacity: 0.5;
+    img{
+      width: 100%;
+      height: 100vh;
+      object-fit: cover;
+    }
+  }
+  form{
+    background: linear-gradient(to right,@Pink,@Purple);
+    .flex-outer li,
+    .flex-inner {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      margin:6rem;
+      padding: 1rem;
+      font-size: 1.5rem;
+      color:white;
+    }
+    
+    .flex-outer > li > label,
+    .flex-outer li p {
+      flex: 1 0 120px;
+      max-width: 220px;
+    }
+    
+    .flex-outer > li > label + *,
+    .flex-inner {
+      flex: 1 0 220px;
+    }
+
+    button{
+      width: 100%;
+      padding: 1rem;
+      color:white;
+      background: @Purple;
+    }
+    input{
+      padding:1rem;
+    }
+    
+  }
+ 
+}
+//Ended by Iraj ,Date:12/21/19 TIME:12:34AM -----
+
+/************ MichelleRH ******************/
+
+ .lowerBody {
+  width: 75%;
+  margin: auto;
+  text-align: center;
+
+    h1 {
+      font-family: 'Inria Serif', serif;
+      .personalSpace();
+      margin-bottom: 2.5rem;
+    }
+
+    div {
+      background-color: @offPink;
+      border-radius: 20px;
+      .personalSpace();
+      padding: 2rem 0;
+
+          h3 {
+            font-size: 2.6rem;
+            padding-bottom: 1.5rem;
+          }
+
+          p {
+            padding: 0 1rem;
+          }
+    }
+}
+
+.infoBoxes {
+  .display-flex(space-between, center);
+  margin: 5rem 0 15rem 0;
+
+      div {
+        width: 25rem;
+        height: 25rem;
+        .personalSpace();
+        background-color: @Orange;
+        border-radius: 20px;
+        color: @Purple;
+
+            h4 {
+              color: @offPink;
+            }
+      }
+}
