--- a/less/mixins.less
+++ b/less/mixins.less
@@ -7,6 +7,13 @@
     align-items: @align-items;
 }
 
+.columnFlex(@justify-content, @align-items) {
+    display: flex;
+    flex-direction: column;
+    justify-content: @justify-content;
+    align-items: @align-items;
+}
+
 // button styling
 
 .butn(@color,@background,@border-radius){
