--- a/less/variable.less
+++ b/less/variable.less
@@ -18,3 +18,8 @@
 
 //I need some space
 @comfortSpace: 1rem 0;
+
+
+//Media Queries
+@phone: ~"(max-width: 500px)";
+@tablet: ~"(min-width: 800px)";
