--- a/css/index.css
+++ b/css/index.css
@@ -268,6 +268,11 @@ footer .footer_nav p {
   width: 100%;
   height: 400px;
 }
+@media (max-width: 500px) {
+  .slideshow-container {
+    display: none;
+  }
+}
 .dot {
   height: 15px;
   width: 15px;
@@ -277,6 +282,11 @@ footer .footer_nav p {
   display: inline-block;
   transition: background-color 0.6s ease;
   margin-bottom: 4rem;
+}
+@media (max-width: 500px) {
+  .dot {
+    display: none;
+  }
 }
 .active {
   background-color: #B5A886;
