--- a/less/home-page.less
+++ b/less/home-page.less
@@ -10,6 +10,7 @@
         height: 50%;
         margin:0 auto;
         padding: 0;
+
         h1{
            
             font-size: 2.6rem;
@@ -63,6 +64,11 @@
 
        
        } 
+
+       @media @phone {
+        display: none;
+      }
+
     }
 
 // slider dot animation
@@ -76,6 +82,10 @@
   display: inline-block;
   transition: background-color 0.6s ease; 
   margin-bottom: 4rem; 
+
+  @media @phone {
+    display: none;
+  }
 }
 .active {
     background-color:@lightHenna;
