--- a/less/nav.less
+++ b/less/nav.less
@@ -5,6 +5,7 @@
         .display-flex(space-around,center);
         flex-direction: row-reverse;
         font-size: 2rem;
+        font-family: 'Inria Serif', serif;
         a{
             color:@offPink;
             text-decoration: none;
