--- a/less/nav.less
+++ b/less/nav.less
@@ -5,7 +5,8 @@
         .display-flex(space-around,center);
         flex-direction: row-reverse;
         font-size: 2rem;
-        font-family: 'Inria Serif', serif;
+        .prettyFont;
+
         a{
             color:@offPink;
             text-decoration: none;
