--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,8 @@
 footer{
-   
+    .prettyFont;
     .footer_nav{
-    background: linear-gradient(to right,@Pink,@Purple); 
-    border-top:5px solid @Orange;
+    background: @Purple; 
+    // border-top:5px solid @Orange;
     // bottom: 0;
     // position:fixed;
     width: 100%;
