--- a/less/home-page.less
+++ b/less/home-page.less
@@ -83,9 +83,9 @@
   transition: background-color 0.6s ease; 
   margin-bottom: 4rem; 
 
-  @media @phone {
-    display: none;
-  }
+      @media @phone {
+              display: none;
+            }
 }
 .active {
     background-color:@lightHenna;
@@ -123,14 +123,20 @@
     h1 {
       font-family: 'Inria Serif', serif;
       .personalSpace();
-      margin-bottom: 2.5rem;
+      margin-bottom: 3rem;
     }
 
     div {
-      background-color: @offPink;
-      border-radius: 20px;
-      .personalSpace();
+      background-color: rgba(@rgbGreen, 0.3);
+      border: 2px solid rgba(@rgbOrange, 0.8);
+      border-radius: 10px;
       padding: 2rem 0;
+      .personalSpace();
+      .boxShadow;
+
+          @media @phone {
+            border-radius: 0;
+          }
 
           h3 {
             font-size: 2.6rem;
@@ -145,7 +151,7 @@
 
 .infoBoxes {
   .display-flex(space-between, center);
-  margin: 5rem 0 15rem 0;
+  margin: 5rem 0 10rem 0;
 
 
       @media @tablet {
@@ -154,31 +160,42 @@
 
       @media @phone {
         .columnFlex(space-between, center);
-        margin: 0 auto;
       }
 
 
         div {
           .columnFlex(space-around, center);
-          width: 25rem;
+          width: 35rem;
           height: 25rem;
           .personalSpace();
-          background-color: #fff;
-          border: 4px @lightHenna solid;
+          background: rgba(@rgbGreen, 0.3);
+          border: 2px rgba(@rgbPink, 0.8) solid;
           border-radius: 10px;
           color: @Purple;
 
             @media @tablet {
-              width: 50%;
+              width: 25rem;
+              height: 20rem;
+              margin: 1rem .5rem;
             }
 
             @media @phone {
               width: 100%;
+              margin: 2rem 0;
+              border-radius: 0;
             }
 
               h4 {
                 color: @Purple;
+
+                  @media @tablet {
+                    font-size: .5rem;
+                  }
               }
+
+              // p {
+              //   font-size: 1rem;
+              // }
         }
 }
 
