--- a/less/mixins.less
+++ b/less/mixins.less
@@ -32,6 +32,10 @@
     border-color: @color;
 }
 
+.boxShadow {
+    box-shadow: 10px 10px 5px 0px rgba(232,232,232,1);
+}
+
 
 
 // Spacing
@@ -40,3 +44,14 @@
     margin: 1rem 0;
     padding: 1rem 0;
 }
+
+.prettyFont {
+    font-family: 'Inria Serif', serif;
+}
+
+
+
+
+
+
+
