--- a/less/variable.less
+++ b/less/variable.less
@@ -14,6 +14,12 @@
 @Purple:#4C1E4F;
 @black:#000000;
 
+@rgbPink: 244, 65, 116;
+@rgbTan: 254, 225, 199;
+@rgbGreen: 181, 168, 134;
+@rgbOrange: 250, 126, 97;
+@rgbPurple: 76, 30, 71;
+
 
 
 //I need some space
@@ -22,4 +28,4 @@
 
 //Media Queries
 @phone: ~"(max-width: 500px)";
-@tablet: ~"(min-width: 800px)";
+@tablet: ~"(min-width: 800px and max-width: 1024px)";
