--- a/less/variable.less
+++ b/less/variable.less
@@ -28,4 +28,4 @@
 
 //Media Queries
 @phone: ~"(max-width: 500px)";
-@tablet: ~"(min-width: 800px and max-width: 1024px)";
+@tablet: ~"(max-width: 1024px)";
