--- a/less/nav.less
+++ b/less/nav.less
@@ -26,5 +26,12 @@
            
         } 
        
+        .signIn,
+        .signUp {
+            border: 2px @Purple solid;
+            padding: .8rem;
+            border-radius: 4px;
+        }
+
     }
     
