add responiveness in about html and change some css styling also modifies sigin sign up page and add responsiveness for tablet and mobile mode

--- a/less/footer.less
+++ b/less/footer.less
@@ -20,6 +20,12 @@ footer{
       p{
           color:@offPink;
       }
+      @media @tablet{
+          width: 100%;
+      }
+      @media @phone{
+          width: 100%;
+      }
 
 
 }
