--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,10 +11,9 @@
         margin:0 auto;
         padding: 0;
 
-        h1{
-           
-            font-size: 2.6rem;
-            color: @Pink;
+        h1{ 
+            font-size: 3rem;
+            color:@white;
             position: absolute;
            text-transform: uppercase;
             width: 100%;
@@ -22,37 +21,37 @@
             top:8rem;
            margin-left: -10rem;
            background: rgb(0, 0, 0); /* fallback color */
-           background: rgba(0, 0, 0, 0.05);
-         
-           
-            
+           background: rgba(0,0,0, 0.03);
+           padding:2rem;
           }
           h2{
-            color:@white ;
+            color:@offPink ;
             font-size: 15px;
-            font-size: 2.3rem;
+            font-size: 2.4rem;
             position: absolute;
             text-transform: uppercase;
             width: 100%;
             text-align: right; 
-            top:12rem;
+            top:14rem;
             margin-left: -10rem;
+            padding:2rem;
             background: rgb(0, 0, 0); /* fallback color */
-            background: rgba(0, 0, 0, 0.05);
+            background: rgba(0,0,0, 0.03);
             
           }
           button{
-            color:@Purple;
+            color:@white;
             position: absolute;
             text-align: center; 
-            top:18rem;
+            top:24rem;
             margin-left: -25rem;
             text-transform: Uppercase;
             padding:1rem;
-            background: @offPink;
-            width:85px;
+            background: @Pink;
+            width:90px;
+
             &:hover{
-                background: @Pink;
+                background: @Orange;
                 color:@offPink;
             }
            
@@ -62,7 +61,8 @@
             height: 400px;
             background-position: center;
             // background-size: cover;
-            object-fit: cover
+            object-fit: cover;
+           filter:brightness(70%);
           }
     
 
@@ -114,9 +114,15 @@
 
 // ----Started Below by Iraj ,Date:12/20/2019---
 // About US styling---
+
+.about-page{
+  background: whitesmoke;
+}
 .main-heading{
   margin:7.8rem;
+  
   h1{
+    font-family:'Segoe UI';
     text-transform: uppercase;
     text-align: center;
     border:2px solid @Purple;
@@ -124,39 +130,62 @@
     color:@Purple;
     background:#ddd;
     box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
+    @media @phone{
+      width:100%;
+      margin-right: 2rem;
+      margin-left: 1rem;
+    }
+    &:hover{
+      background: rgb(150, 103, 150);
+    }
   }
 }
 
 
 .card-wrapper{
   display: grid;
- grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-// grid-template-columns: repeat(7, 1fr);
-@media @phone{
-  grid-template-columns: 1fr;
-  grid-gap:1rem;
-  width: 50%;
+  grid-template-columns: repeat(7, 1fr);
+ padding:0.3rem;
+
+@media @tablet{
+  grid-template-columns: 1fr 1fr ;
+  grid-gap:3rem;
+  width: 80%;
+  height:50%;
   margin-top: 7rem;
   margin-bottom: 7rem;
-  // margin-right: 200px;
+  margin-left:8rem;
+
+}
+@media @phone{
+  grid-template-columns: 1fr ;
+  width:80%;
+  grid-gap:3rem;
+  margin-left:4rem;
+  
 }
  margin: 7rem;
  width: 90%;
  height: 50%;
+}
  
 
 
   
  .card-container{
   background:rgb(194, 130, 194);
-  box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);
-  // border:3px solid black;  
-  @media @phone{
+  box-shadow: 0 4px 8px 0 rgba(49, 7, 7, 0.6);  
+  @media @tablet{
    
-    //  margin-left: 4rem;
     .display-flex(center,center);
     flex-direction: column;
-     width: 100%;
+    margin-left:2rem;
+    margin-top:1rem;
+    margin-bottom:1rem;
+    width: 80%; 
+  }
+  @media @phone {
+    margin:2rem;
   }
   &:hover{
     transform: scale(1.1);
@@ -165,7 +194,6 @@
   .card-img{
     background: #ddd;
     width: 100%;
-    // border-radius: 50%;
    img{
    width: 80%;
    height: 150px;
@@ -174,8 +202,16 @@
    overflow: hidden;
    border-radius: 50%;
    border: 4px solid rgb(194, 130, 194);
+   @media @tablet{
+    width: 60%;
+    margin-left: 5.5rem;
+  }
+  @media @phone{
+    width:60%;
+    margin-left: 4.8rem;
+  }
   
-    }
+  }
 
 
   }
@@ -190,12 +226,11 @@
      font-size: 1.7rem;
      text-transform: uppercase;
      margin-top:1px;
-     font-family:cursive;
+     font-family: 'cursive';
     }
     p{
       font-size: 1.4rem;
       text-transform: uppercase;
-      font-family:cursive;
     }
    .contact{
      margin:1rem;
@@ -212,7 +247,7 @@
     
   }
  }
-}
+
 // Bounce Animation for card container...//
 @keyframes bounce {
 	0%, 100%, 20%, 50%, 80% {
@@ -255,7 +290,7 @@
   display: grid;
   grid-template-columns: 2fr 1fr;
   @media @phone{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0fr 1fr;
   }
   top: 0;
   .signin-img{
@@ -295,6 +330,9 @@
       padding: 1rem;
       color:white;
       background: @Purple;
+      &:hover{
+        background:@Pink;
+      }
     }
     input{
       padding:1rem;
