--- a/less/nav.less
+++ b/less/nav.less
@@ -34,4 +34,19 @@
         }
 
     }
-    
+
+
+
+    //Mobile Nav...Started by Michelle RH on 01/07/2020
+
+@media @desktop {
+    .icon {
+        display: none;
+    }
+}
+
+@media @tablet {
+    .icon {
+        display: none;
+    }
+}  
