moved to separate navigations. mobileNav added.

--- a/less/nav.less
+++ b/less/nav.less
@@ -40,13 +40,19 @@
     //Mobile Nav...Started by Michelle RH on 01/07/2020
 
 @media @desktop {
-    .icon {
+    .mobileNav {
         display: none;
     }
 }
 
 @media @tablet {
-    .icon {
+    .mobileNav {
         display: none;
     }
 }  
+
+@media @phone {
+    nav p {
+        display: none;
+    }
+}
