--- a/css/index.css
+++ b/css/index.css
@@ -217,12 +217,17 @@ img {
   border-radius: 4px;
 }
 @media (min-width: 1025px) {
-  .icon {
+  .mobileNav {
     display: none;
   }
 }
 @media (min-width: 501px) and (max-width: 1024px) {
-  .icon {
+  .mobileNav {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  nav p {
     display: none;
   }
 }
