--- a/less/nav.less
+++ b/less/nav.less
@@ -43,20 +43,15 @@
     .display-flex(space-between, center);
     flex-direction: row-reverse;
     background-color: @lightHenna;
-    // padding: 1rem;
     width: 100%;
 
         .tab {
             .display-flex(center, center);
             background-color: @lightHenna;
-            padding: 0 20px;
-            margin: 0 10px;
+            padding: 1rem 2rem;
         }
 
         .active {
-            // margin-left: 10px;
-            padding: 1rem;
-            // max-width: 200px;
             background-color: @Orange;
         }
 
@@ -82,3 +77,9 @@
         display: none;
     }
 }  
+
+@media @phone {
+    nav a {
+        visibility: hidden;
+    }
+}
