--- a/css/index.css
+++ b/css/index.css
@@ -212,7 +212,10 @@ img {
 }
 .nav_bar .signIn,
 .nav_bar .signUp {
+  box-shadow: 3px 4px 7px -1px #4c1e4f;
+  background-color: #FA7E61;
   border: 2px #4C1E4F solid;
+  color: offPink;
   padding: 0.8rem;
   border-radius: 4px;
 }
