--- a/less/nav.less
+++ b/less/nav.less
@@ -28,7 +28,10 @@
        
         .signIn,
         .signUp {
+            box-shadow: 3px 4px 7px -1px rgba(76,30,79,1);
+            background-color: @Orange;
             border: 2px @Purple solid;
+            color: offPink;
             padding: .8rem;
             border-radius: 4px;
         }
@@ -62,7 +65,7 @@
 
             
 
-
+// Queries for navigations
 
 
 
