--- a/less/home-page.less
+++ b/less/home-page.less
@@ -60,7 +60,6 @@
             width: 100%;
             height: 400px;
             background-position: center;
-            // background-size: cover;
             object-fit: cover;
            filter:brightness(70%);
           }
@@ -116,7 +115,7 @@
 // About US styling---
 
 .about-page{
-  background: whitesmoke;
+  background: lightgrey;
 }
 .main-heading{
   margin:7.8rem;
@@ -137,6 +136,7 @@
     }
     &:hover{
       background: rgb(150, 103, 150);
+      color:@white;
     }
   }
 }
@@ -204,11 +204,19 @@
    border: 4px solid rgb(194, 130, 194);
    @media @tablet{
     width: 60%;
-    margin-left: 5.5rem;
+    // margin-left: 5.5rem;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
   }
   @media @phone{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     width:60%;
-    margin-left: 4.8rem;
+    height:170px;
+    
+    
   }
   
   }
@@ -227,20 +235,34 @@
      text-transform: uppercase;
      margin-top:1px;
      font-family: 'cursive';
+     @media @tablet{
+       font-size: 2rem;
+     }
     }
     p{
       font-size: 1.4rem;
       text-transform: uppercase;
+      @media @tablet{
+        font-size:1.5rem ;
+      }
     }
    .contact{
      margin:1rem;
      
      a{
        color:@white;
-       margin-right: 1px;
+       margin:0.5rem;
        font-size: 1.8rem;
        &:hover{
          color:lightgray;
+       }
+       @media @tablet {
+         font-size: 2rem;
+         margin: 1rem;
+       }
+       @media @phone {
+         margin:1rem;
+         font-size: 2rem;
        }
      }
    }
@@ -273,8 +295,8 @@
   animation-fill-mode: both;
   -webkit-animation-timing-function: ease-in-out;
   animation-timing-function: ease-in-out;
-  animation-iteration-count: infinite;
-  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: 1;
+  -webkit-animation-iteration-count: 1;
   &:hover {
     cursor: pointer;
     animation-name: bounce;
