--- a/less/nav.less
+++ b/less/nav.less
@@ -47,6 +47,11 @@
     flex-direction: row-reverse;
     background-color: @lightHenna;
     width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 9999;
 
         .tab {
             .display-flex(center, center);
